# message-relay

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
src/message_relay/: main.py
src/message_relay/dependencies/: __init__.py  discord_client.py
