[project]
name = "message-relay"
version = "0.1.0"
description = "A Discord Bot with the intention of acting as a relay to send messages to other services"
authors = [
    {name = "Colby Hillman",email = "colby.hillman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
